--- a/src/Styles/main.scss
+++ b/src/Styles/main.scss
@@ -149,6 +149,37 @@
             }
         }
     }
+    .loader{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        .lds-dual-ring {
+            display: inline-block;
+            width: 80px;
+            height: 80px;
+          }
+          .lds-dual-ring:after {
+            content: " ";
+            display: block;
+            width: 64px;
+            height: 64px;
+            margin: 8px;
+            border-radius: 50%;
+            border: 6px solid $darkModeElements;
+            border-color: $darkModeElements transparent $darkModeElements transparent;
+            animation: lds-dual-ring 1.2s linear infinite;
+          }
+          @keyframes lds-dual-ring {
+            0% {
+              transform: rotate(0deg);
+            }
+            100% {
+              transform: rotate(360deg);
+            }
+        }
+    }
     .cardContainer{
         @extend %flex-between;
         flex-wrap: wrap;
@@ -158,6 +189,7 @@
         @media(max-width: 900px) {
             justify-content: space-around;
         }
+          
         .card{
             display: flex;
             align-items: flex-start;
@@ -167,7 +199,7 @@
             border-radius: 5px;
             box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.137);
             overflow: hidden;
-            li{
+            .linknav{
                 width: 100%;
                 height: 100%;
                 img{
@@ -209,21 +241,24 @@
         padding: 110px 0 100px;
     }
     .backBtn{
+        border: none;
+        box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.103);
+        width: 110px;
+        height: 40px;
+        border-radius: 6px;
+        padding: 0 8px;
+        cursor: pointer;
         @media(max-width: 1250px){
             position: absolute;
             left: 10%;
         }
-        button{
-            border: none;
-            box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.103);
-            width: 110px;
-            height: 40px;
-            border-radius: 6px;
+        &__anchor{
             display: flex;
             align-items: center;
             justify-content: space-evenly;
-            padding: 0 8px;
-            cursor: pointer;
+            height: 100%;
+            width: 100%;
+            text-decoration: none;
         }
     }
     .countryContent{
